meta/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meta
spec:
  selector:
    app: meta
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
