meta/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meta-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - meta.pmh.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: meta
          port: 3000
          weight: 1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: meta-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: meta-route
  oidc:
    provider:
      issuer: "https://auth.pmh.codes/application/o/meta/"
      tokenEndpoint: "http://authentik-service.authentik.svc.cluster.local:9000/application/o/token/"
    clientID: "f121rKrivB4rDKxIJ8K5aQsu5Zi53geShPlr2rRc"
    clientSecret:
      group: ""
      kind: "Secret"
      name: "meta-auth-secrets"
